correted missing </button>

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
@@ -51,7 +51,7 @@
 	
 	<tml:case condition="CMM.setting('layout')=='dialog'">
 		<div class="footer">
-			<button class="btn btn-default" data-modal="hide"><tml:label key="close"/>
+			<button class="btn btn-default" data-modal="hide"><tml:label key="close"/></button>
 		</div>
 	</tml:case>
 	
