--- a/OpenWGA/plugins/management/design/tml/html/approval/reset.tml
+++ b/OpenWGA/plugins/management/design/tml/html/approval/reset.tml
@@ -40,21 +40,15 @@
 		</tml:case>
 		
 		<tml:case istrue="contentWasReset">
-		
 			<h4><tml:label key="confirmReset" param1="{con.title}"/></h4>
-		
 		</tml:case>
 		
 		<tml:case condition="con.status != con.STATUS_REVIEW">
-		
 			<h4><tml:label key="resetFalseStatus" param1="{con.title}"/></h4>
-			
 		</tml:case>		
 		
-		<tml:case condition="db().getWorkflowEngine().getWorkflow(con).isAlreadyApprovedByUser()">
-		
+		<tml:case condition="con.getDatabase().getWorkflowEngine().getWorkflow(con).isAlreadyApprovedByUser()">
 			<h4><tml:label key="alreadyApproved" param1="{con.title}"/></h4>
-		
 		</tml:case>
 	
 		<tml:caseelse>
