#00004876: Admin client: open-in does not carry the context to open

--- a/OpenWGA/plugins/admin/design/tml/html/main-portlet.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/main-portlet.tml
@@ -136,7 +136,7 @@
 
 <tml:if condition="_portletname && _may_see_doc">
 	<tml:then>				
-		<tml:portlet name="{item:_portletname}" designdb="{_portletdb||db().getDbReference()}" ref="{item:_portlettml}" ajax="true"/>
+		<tml:portlet forcestate="true" name="{item:_portletname}" designdb="{_portletdb||db().getDbReference()}" ref="{item:_portlettml}" ajax="true"/>
 	</tml:then>
 	<tml:else>
 		<div style="padding:20px">
