#00004877: admin client: Improved code input in TMLScript console

--- a/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
+++ b/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
@@ -692,4 +692,12 @@ div.textfield {
 	padding: 10px;
 	height: 300px;
 }
+
+textarea.source-code{
+	font-family:Courier;
+	font-weight:normal !important;
+	font-size:1.25em;
+	min-height:100px;
+	-moz-tab-size:4;
+	tab-size:4;
 }
