#00004883: made "index released only" to a global option; added native option "operator"

--- a/OpenWGA/plugins/admin/design/tml/html/wga/advanced/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/advanced/form.tml
@@ -76,6 +76,7 @@
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/path"/>
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/optimizeIndexAutomatically" o_type="boolean"/>
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/useLanguageAnalyzers" o_type="boolean"/>
+					<tml:[system:fs-input] o_field="luceneManagerConfiguration/indexReleasedContentsOnly" o_type="boolean"/>
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/maxBooleanClauseCount" o_type="number" o_format="0"/>
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/maxDocsPerDBSession" o_type="number" o_format="0"/>
 					<tml:[system:fs-input] o_field="luceneManagerConfiguration/indexInterval" o_type="number" o_format="0"/>
