--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/dialog-clear-caches.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/dialog-clear-caches.tml
@@ -51,6 +51,15 @@
 		clearedCaches.push("User");
 		log.info(tmlparam1 + ": User Caches cleared");
 	}
+
+	if(!tmlform || tmlform.fieldlist("caches").contains("ppr")){
+		var pprCache = wgadb.getAttribute(wgacore.DBATTRIB_PPRCACHE);
+		if(pprCache){
+			pprCache.clear();
+			clearedCaches.push("Post-Processed Resources");
+			log.info(tmlparam1 + ": PPR Cache cleared");
+		}
+	}
 	
 	var event = createevent("wga-server-message");
 	event.addParameter("msg", "Selected caches cleared for db " + tmlparam1 + ": " + clearedCaches.join(", "));
@@ -62,10 +71,10 @@
 	<tml:form id="query-clear-caches" source="none">
 		
 		<tml:script>
-			tmlform.caches = createlist(["data", "file", "tml", "user"]);
+			tmlform.caches = createlist(["data", "file", "tml", "user", "ppr"]);
 		</tml:script>
 		<tml:input name="caches" type="checkbox" 
-			options="Data Cache|data,File Cache|file,WebTML Cache|tml,User Caches|user"
+			options="Data Cache|data,File Cache|file,WebTML Cache|tml,User Caches|user,Post-Processed Resoures|ppr"
 		/>
 		<script>
 			DBM.query_clear_chaches = function(){
