#00004888: CM: paste page does not copy attachment meta data

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/paste-page.tml
@@ -41,6 +41,7 @@
 	}
 	catch(e){
 		tmlform.addMessage(e);
+		logException(e);
 	}
 	
 	function copyStruct(source, dest, recursive, createReferences, publish, position){
