#00005010: CMM-Login-Module message "unable to find database"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/render.tml
@@ -56,12 +56,8 @@
 	_username = "anonymous";
 	_dbkey = CMM.setting("dbkey")||db().getDbReference();
 	var dbcontext = context("db:"+_dbkey, false)
-	if(!dbcontext)
-		log.info("CMM-Login-Module: unable to find database " + _dbkey);
-	else{
+	if(dbcontext)
 		_username = dbcontext.meta("db", "username");
-	}
-	
 </tml:script>
 
 <tml:if condition="_username=='anonymous'">
