--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
@@ -18,7 +18,7 @@
 </fieldset>
 
 <fieldset>
-	<legend>Databases</legend>
+	<legend>Applications</legend>
 
 	<label>Allowed Apps:</label>
 	<div class="data">
@@ -75,6 +75,8 @@
 		</tml:case>
 	</tml:case>
 
+	<tml:[system:fs-input] o_field="preferedLanguages" o_type="text" o_emptytext="optional comma seperated language codes" o_allowblank="true"/>
+	
 </fieldset>
 
 <fieldset>
