--- a/OpenWGA/plugins/cm/design/tml/html/cms/dashboard/trash-entries.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dashboard/trash-entries.tml
@@ -33,7 +33,7 @@
 		var entry = entries.next();
 		var deletedBy = entry.getExtensionData("deletedBy");
 		if(deletedBy==user){
-			_docs.add(entry);
+			_docs.add(entry.getStructKey());
 		}		
 	}
 </tml:script>
@@ -44,7 +44,7 @@
 		<tml:foreach item="_docs" currentvalue="_doc">
 			<tml:script>
 				_Struct = AFW.structentry(_doc);
-				var deletedFrom = _doc.getExtensionData("deletedFrom");
+				var deletedFrom = _Struct.WGObject.getExtensionData("deletedFrom");
 				var parent = db().getDocumentByKey(deletedFrom);
 				_path = AFW.structentry(parent).getPathInfo(" / ")
 			</tml:script>
@@ -61,8 +61,9 @@
 			</li>
 			
 		</tml:foreach>
+		
 		</ul>
-		<p><tml:label key="dashboard.please-cleanup-trash"/>.</p>
+		<h3><tml:label key="dashboard.please-cleanup-trash"/>.</h3>
 	</tml:then>
 	
 	<tml:else>
@@ -70,3 +71,4 @@
 	</tml:else>
 
 </tml:if>
+
